--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
   <head>
     <link href="css/style.css" rel="stylesheet" type="text/css" />
     <meta charset="utf-8">
@@ -9,10 +9,12 @@
   </head>
   <body>
     <header>
-        <img src="assets/images/logo.png" class="logo" />
-        <h1>Nos photographes</h1>
+      <a href="/" aria-label="link to home page" class="header-link">
+        <img src="assets/images/logo.png" class="logo" alt="Fisheye Home page" role="Image Link"/>
+      </a>
+        <h1 role="Header (h1)">Nos photographes</h1>
     </header>
-    <main id="main">
+    <main id="main" class="main-home">
         <div class="photographer_section"></div>
     </main>
     <script src="scripts/factories/photographer.js"></script>
