--- a/photographer.html
+++ b/photographer.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
   <head>
     <link href="css/style.css" rel="stylesheet" type="text/css" />
     <meta charset="utf-8">
@@ -9,12 +9,19 @@
   </head>
   <body>
     <header>
-      <img src="assets/images/logo.png" class="logo" />
+      <a href="/" aria-label="link to home page" class="header-link">
+        <img src="assets/images/logo.png" class="logo" alt="Fisheye Home page" role="Image Link"/>
+      </a>
     </header>
-    <main id="main">
+    <main id="main" class="main-photographer">
       <div class="photograph-header">
-        <button class="contact_button" onclick="displayModal()">Contactez-moi</button>
+        <div class="centered">
+          <button class="contact_button" onclick="displayModal()" aria-label="Contact Me">Contactez-moi</button>
+        </div>
       </div>
+      <section class="media-collection"> 
+
+      </section>
     </main>
     <div id="contact_modal">
 			<div class="modal">
@@ -31,6 +38,8 @@
 				</form>
 			</div>
 		</div>
+    <script src="./scripts/factories/media.js"></script>
+    <script src="./scripts/factories/detailsPhotographer.js"></script>
     <script src="/scripts/pages/photographer.js"></script>
     <script src="/scripts/utils/contactForm.js"></script>
   </body>
