--- a/photographer.html
+++ b/photographer.html
@@ -22,6 +22,8 @@
       <section class="media-collection"> 
 
       </section>
+      <aside class="info-collection">
+      </aside>
     </main>
     <div id="contact_modal">
 			<div class="modal">
