--- a/photographer.html
+++ b/photographer.html
@@ -68,15 +68,19 @@
           <button class="contact_button" onclick="displayModal()" aria-label="Contact Me">Contactez-moi</button>
         </div>
       </div>
+      <div class="test">
+        <a href="#">test</a>
+      </div>
       <section class="media-collection"> 
 
       </section>
       <aside class="info-collection">
       </aside>
     </main>
-    <script src="./scripts/factories/media.js"></script>
     <script src="./scripts/factories/detailsPhotographer.js"></script>
+    <script src="./scripts/factories/media.js"></script>
     <script src="/scripts/pages/photographer.js"></script>
+    <script src="./scripts/utils/sort.js"></script>
     <script src="/scripts/utils/contactForm.js"></script>
     <script src="./scripts/utils/lightbox.js"></script>
   </body>
