--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <body>
     <header>
       <a href="/" aria-label="link to home page" class="header-link">
-        <img src="assets/images/logo.png" class="logo" alt="Fisheye Home page" role="Image Link"/>
+        <img src="assets/images/logo.png" class="logo" alt="Fisheye Home page" role="link"/>
       </a>
-        <h1 role="Header (h1)">Nos photographes</h1>
+        <h1>Nos photographes</h1>
     </header>
     <main id="main" class="main-home">
         <div class="photographer_section"></div>
