fix know problems acheckcer

--- a/photographer.html
+++ b/photographer.html
@@ -20,19 +20,19 @@
         </header>
 				<form id="contact_form" aria-label="formulaire de contact">
 					<div>
-						<label>Prénom</label>
+						<label for="form_name">Prénom</label>
 						<input id="form_name" aria-label="First Name"/>
 					</div>
           <div>
-						<label>Nom</label>
+						<label for="form_lastName">Nom</label>
 						<input id="form_lastName" aria-label="Last Name"/>
 					</div>
           <div>
-						<label>Email</label>
+						<label for="form_email">Email</label>
 						<input id="form_email" aria-label="Email" />
 					</div>
           <div>
-						<label>Message</label>
+						<label for="form_message">Message</label>
 						<input class="modal-input-textarea" id="form_message" aria-label="Your Message" />
 					</div>
           <button class="contact_button" type="submit" aria-label="Send">Envoyer</button>
