--- a/photographer.html
+++ b/photographer.html
@@ -57,7 +57,7 @@
           </div>
       </div>
     </div>
-    <header>
+    <header class="header-page">
       <a href="/" aria-label="link to home page" class="header-link">
         <img src="assets/images/logo.png" class="logo" alt="Fisheye Home page" role="link"/>
       </a>
